deploy-kubectl/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: backend
   annotations:
    prometheus.io/scrape: 'true'
   labels:
      app: backend
spec:
   ports:
   - port: 8080
     targetPort: 8080
   selector:
      name: backend
   type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        app: backend
        name: backend
    spec:
      containers:
        - name: backend
          image: mtr.devops.telekom.de/miasnikov/backend:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: regcred
