deploy-kubectl/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: frontend-service
   annotations:
    prometheus.io/scrape: 'true'
   labels:
      app: frontend
spec:
   ports:
   - port: 8081
     targetPort: 8081
   selector:
      name: frontend
   type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      labels:
        app: frontend
        name: frontend
    spec:
      containers:
        - name: frontend
          image: mtr.devops.telekom.de/miasnikov/frontend:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: regcred
