deploy-kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    app: frontend-ingress
spec:
  rules:
  - host: miasnikov.school.telekom-devops-school.de
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 8081
